--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/blobstudio-adaptive.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Black Observer</title>
+    <meta name="description" content="Someone's collection of software made for a reason.">
+
+    <title>The Black Observer</title>
   </head>
   <body>
     <div id="root"></div>
